# misato

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/: todo.md  where-we-are.md
scripts/: gen-icon-source.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AffectionMeter.tsx  Chat.tsx  ModePicker.tsx  Portrait.tsx
src/lib/: modes.ts  moods.ts  ollama.ts  speech.ts  translate.ts  voicevox.ts
src/persona/: misato.ts
